--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Article preview component</title>
     <link rel="stylesheet" href="styles/card.css" />
   </head>
@@ -33,8 +31,7 @@
             <img
               src="images/avatar-michelle.jpg"
               class="avatar__image"
-              alt="michelle"
-              srcset=""
+              alt="michelle-appleton"
             />
             <div class="info-author__about">
               <p class="about__name">Michelle Appleton</p>
@@ -51,7 +48,6 @@
                   src="images/icon-facebook.svg"
                   class="share-active__facebook"
                   alt="facebook"
-                  srcset=""
               /></a>
               <a
                 href="https://www.instagram.com/sucremma/?hl=es"
@@ -60,19 +56,17 @@
                   src="images/icon-twitter.svg"
                   class="share-active__twitter"
                   alt="twitter"
-                  srcset=""
               /></a>
               <a href="https://www.pinterest.com/" target="_blank"
                 ><img
                   src="images/icon-pinterest.svg"
                   class="share-active__pinterest"
                   alt="pinterest"
-                  srcset=""
               /></a>
             </div>
           </div>
           <div class="info-author__share">
-            <img src="images/icon-share.svg" alt="" />
+            <img src="images/icon-share.svg" alt="share" />
           </div>
         </section>
       </article>
